# adi-adxl355-rs

./: .gitattributes  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Embed.toml  NOTICE  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: CI.yml
adi-adxl355/: Cargo.toml  README.md
adi-adxl355-async/: Cargo.toml  README.md
adi-adxl355-async/src/: lib.rs
adi-adxl355/src/: config.rs  interrupt.rs  lib.rs  modes.rs  register.rs  status.rs
examples/nrf52840-embassy/: Cargo.toml  README.md  build.rs
examples/rp-linux/: Cargo.toml  LICENSE  README.md
examples/rp-linux/src/: main.rs
