[package]
name = "adi-adxl355"
description = "An embedded-hal driver for the ADXL355 accelerometer"
version = "0.1.0"
edition = "2021"
rust-version = "1.68"
authors = ["Max Lehuraux <max.lehuraux@analog.com>"]
keywords = ["accelerometer", "adi", "MEMS", "analog-devices"]
categories = ["embedded", "hardware-support", "no-std"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/analogdevicesinc/adi-adxl355-rs"
homepage = "https://github.com/analogdevicesinc/adi-adxl355-rs"

[dependencies]
defmt = { version = "0.3", optional = true }
embedded-hal = "1.0.0-alpha.10"
micromath = { version = "2.0", features = ["vector"] }
thiserror = { version = "1.0", optional = true }

[features]
default = []
defmt = ["dep:defmt"]
std = ["dep:thiserror"]
