[package]
name = "nrf52840-adxl355-embassy-example"
description = "Examples running on a nRF52840 for the ADXL355 accelerometer async driver"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
authors = ["Max Lehuraux <max.lehuraux@analog.com>"]
keywords = [
    "embedded-hal-driver",
    "embedded-hal-async",
    "accelerometer",
    "MEMS",
    "analog-devices",
]
categories = ["embedded", "hardware-support", "no-std"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/analogdevicesinc/adi-adxl355-rs"
homepage = "https://github.com/analogdevicesinc/adi-adxl355-rs"

[dependencies]
adi-adxl355 = { path = "../../adi-adxl355", version = "1.0.0", features = [
    "defmt",
] }
adi-adxl355-async = { path = "../../adi-adxl355-async", version = "1.0.0", features = [
    "defmt",
] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-embedded-hal = "0.1.0"
embassy-executor = { version = "0.5.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-futures = "0.1.0"
embassy-nrf = { version = "0.1.0", features = [
    "defmt",
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "time",
] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "1.0"
