[package]
name = "rp-adxl355"
version = "1.0.0"
edition = "2021"
description = "Application demonstrating the ADXL355 driver on Raspberry Pi 4"
readme = "README.md"
authors = ["Max Lehuraux <max.lehuraux@analog.com>"]
keywords = [
    "embedded-hal-driver",
    "linux-embedded-hal",
    "accelerometer",
    "MEMS",
    "analog-devices",
]
categories = ["embedded", "hardware-support"]
license = "Apache-2.0"
repository = "https://github.com/analogdevicesinc/adi-adxl355-rs"
homepage = "https://github.com/analogdevicesinc/adi-adxl355-rs"

[dependencies]
adi-adxl355 = { path = "../../adi-adxl355", version = "1.0.0", features = [
    "std",
] }
anyhow = "1.0"
linux-embedded-hal = "0.4.0"
